--- a/_config.yml
+++ b/_config.yml
@@ -10,3 +10,12 @@ paginate: 15
 baseurl: /
 domain_name: 'http://openwebpodcast.de'
 gems: [jekyll-paginate]
+navigation:
+    - label: Home
+      url: /
+    - label: About
+      url: /about/
+    - label: Fork on GitHub
+      url: https://github.com/OpenWeb-Podcast/website
+    - label: Impressum
+      url: /impressum/
