--- a/_config.yml
+++ b/_config.yml
@@ -17,5 +17,7 @@ navigation:
       url: /about/
     - label: Fork on GitHub
       url: https://github.com/OpenWeb-Podcast/website
+    - label: Datenschutzerklärung
+      url: /datenschutz/
     - label: Impressum
       url: /impressum/
