--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ navigation:
     - label: About
       url: /about/
     - label: Fork on GitHub
-      url: https://github.com/OpenWeb-Podcast/website
+      url: https://github.com/OpenWeb-Podcast/openweb-podcast.github.io/
     - label: Datenschutzerklärung
       url: /datenschutz/
     - label: Impressum
