--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,8 @@ paginate: 15
 baseurl: /
 domain_name: 'https://openwebpodcast.de'
 gems: [jekyll-paginate]
+plugins:
+  - jekyll-sitemap
 navigation:
     - label: Home
       url: /
